changes to picture size again to fix bug on iphone

--- a/style.css
+++ b/style.css
@@ -260,6 +260,7 @@ p {
 
 .project-photo img {
   width: 100%;
+  height: auto;
   min-height: auto
 }
 
